Add details of the dev process to the QMS app

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                     <div class="overlay">
                       <div class="inner">
                         <h3 class="h4 reference-title">QMS Manager</h3>
-                        <p>Short project description goes here...</p>
+                        <p>Quality Management System</p>
                       </div>
                     </div></a
                   >
@@ -365,10 +365,69 @@
                     </p>
                     <h5>Costs</h5>
                     <p>
-                      Keep track of all the cost involved with each
+                      Keep track of all costs involved with each
                       non-conformace, either internal or external.
                     </p>
-                    <h5>Used by:</h5>
+                    <h5>Development</h5>
+                    <ol >
+                      <li >
+                        Front End:
+                        <ul>
+                          <li>
+                            Javascript (ES6)
+                          </li>
+                          <li>
+                            HTML, CSS
+                          </li>
+                          <li>
+                              ReactJS (react hooks, redux)
+                            </li>
+                            <li>
+                              Typescript
+                            </li>
+                            <li>
+                              Node (npm)
+                            </li>
+                            <li>
+                              Testing:
+                              <ul>
+                                <li>
+                                  UI unit tests (Jest)
+                                </li>
+                                <li>
+                                  UI intergration tests (Protractor)
+                                </li>
+                              </ul>
+                            </li>
+                        </ul>
+                      </li >
+                      <li >
+                        Back End:
+                        <ul>
+                          <li>
+                            Java
+                            <li>
+                              Spring Boot (REST API Framework)
+                            </li>
+                            <li>
+                              Spring Security (authentication and authorization - JWT)
+                            </li>
+                            <li>
+                              Testing:
+                              <ul>
+                                <li>
+                                  Unit tests (JUnit 5)
+                                </li>
+                                <li>
+                                  Integration tests (Spring Test Context framework)
+                                </li>
+                              </ul>
+                            </li>
+                          </li>
+                        </ul>
+                      </li >
+                      </ol >
+                    <h5>Being used by:</h5>
                     <!-- Customers-->
                     <section id="customers" class="customers-section sm-gray">
                       <div class="container">
