--- a/index.html
+++ b/index.html
@@ -235,11 +235,14 @@
             <div class="testimonial full-height">
               <div class="text">
                 <p>
-                  One morning, when Gregor Samsa woke from troubled dreams, he
-                  found himself transformed in his bed into a horrible vermin.
-                  He lay on his armour-like back, and if he lifted his head a
-                  little he could see his brown belly, slightly domed and
-                  divided by arches into stiff sections.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
                 </p>
               </div>
               <div class="bottom">
@@ -256,11 +259,14 @@
             <div class="testimonial full-height">
               <div class="text">
                 <p>
-                  The bedding was hardly able to cover it and seemed ready to
-                  slide off any moment. His many legs, pitifully thin compared
-                  with the size of the rest of him, waved about helplessly as he
-                  looked. &quot;What is happened to me? &quot; he thought. It
-                  was not a dream.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
                 </p>
               </div>
               <div class="bottom">
@@ -277,11 +283,14 @@
             <div class="testimonial full-height">
               <div class="text">
                 <p>
-                  It showed a lady fitted out with a fur hat and fur boa who sat
-                  upright, raising a heavy fur muff that covered the whole of
-                  her lower arm towards the viewer. Gregor then turned to look
-                  out the window at the dull weather. Drops of rain could be
-                  heard hitting the pane, which made him feel quite sad.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
                 </p>
               </div>
               <div class="bottom">
@@ -359,74 +368,90 @@
                     </p>
                     <h5>Root Cause Analysis</h5>
                     <p>
-                      Drive continuous improvement using a variety of
-                      methodologies, including the process audit checklist,
-                      fishbone (Ishikawa) diagram and 5 WHY.
+                      Report, track and react to defects and quality
+                      nonconformances within your operations. Launch
+                      investigations and find the root cause of the
+                      nonconformace using a variety of methodologies, including
+                      the process audit checklist, fishbone (Ishikawa) diagram
+                      and 5 WHY.
                     </p>
                     <h5>Costs</h5>
                     <p>
-                      Keep track of all costs involved with each
-                      non-conformace, either internal or external.
+                      Keep track of all costs involved with each non-conformace,
+                      either internal or external.
                     </p>
                     <h5>Development</h5>
-                    <ol >
-                      <li >
+                    <ol>
+                      <li>
                         Front End:
                         <ul>
                           <li>
-                            Javascript (ES6)
+                            <p>Javascript (ES6)</p>
                           </li>
                           <li>
-                            HTML, CSS
+                            <p>HTML, CSS</p>
                           </li>
                           <li>
-                              ReactJS (react hooks, redux)
-                            </li>
-                            <li>
-                              Typescript
-                            </li>
-                            <li>
-                              Node (npm)
-                            </li>
-                            <li>
-                              Testing:
-                              <ul>
-                                <li>
-                                  UI unit tests (Jest)
-                                </li>
-                                <li>
-                                  UI intergration tests (Protractor)
-                                </li>
-                              </ul>
-                            </li>
+                            <p>ReactJS (react hooks, redux)</p>
+                          </li>
+                          <li>
+                            <p>Typescript</p>
+                          </li>
+                          <li>
+                            <p>Node (npm)</p>
+                          </li>
+                          <li>
+                            <p>Testing:</p>
+                            <ul>
+                              <li>
+                                <p>UI unit tests (Jest)</p>
+                              </li>
+                              <li>
+                                <p>UI intergration tests (Protractor)</p>
+                              </li>
+                            </ul>
+                          </li>
                         </ul>
-                      </li >
-                      <li >
+                      </li>
+                      <li>
                         Back End:
                         <ul>
                           <li>
-                            Java
-                            <li>
-                              Spring Boot (REST API Framework)
-                            </li>
-                            <li>
-                              Spring Security (authentication and authorization - JWT)
-                            </li>
-                            <li>
-                              Testing:
-                              <ul>
-                                <li>
-                                  Unit tests (JUnit 5)
-                                </li>
-                                <li>
-                                  Integration tests (Spring Test Context framework)
-                                </li>
-                              </ul>
-                            </li>
+                            <p>
+                              Java
+                              <li>
+                                <p>Spring Boot (REST API Framework)</p>
+                              </li>
+                              <li>
+                                <p>
+                                  Spring Security (authentication and
+                                  authorization - JWT)
+                                </p>
+                              </li>
+                              <li>
+                                <p>Testing:</p>
+                                <ul>
+                                  <li>
+                                    <p>Unit tests (JUnit 5)</p>
+                                  </li>
+                                  <li>
+                                    <p>
+                                      Integration tests (Spring Test Context
+                                      Framework)
+                                    </p>
+                                  </li>
+                                </ul>
+                              </li>
+                              <li>
+                                <p>
+                                  Database (Hibernate/Spring data JPA + MySQL)
+                                </p>
+                              </li>
+                            </p>
                           </li>
                         </ul>
-                      </li >
-                      </ol >
+                      </li>
+                    </ol>
                     <h5>Being used by:</h5>
                     <!-- Customers-->
                     <section id="customers" class="customers-section sm-gray">
@@ -544,10 +569,7 @@
         </header>
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <form
-              id="contact-form"
-              action="#"
-            >
+            <form id="contact-form" action="#">
               <div class="messages"></div>
               <div class="controls">
                 <div class="row">
@@ -601,7 +623,11 @@
                     ></textarea>
                   </div>
                   <div class="col-md-12 text-center">
-                    <button id="submit-button" type="button" class="btn btn-outline-primary">
+                    <button
+                      id="submit-button"
+                      type="button"
+                      class="btn btn-outline-primary"
+                    >
                       Send message
                     </button>
                   </div>
@@ -638,7 +664,7 @@
           </div>
           <!-- /.6-->
           <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
-            <p>© 2018 Your name goes here. All rights reserved.</p>
+            <p>© 2020 Bogdan Mihoci. All rights reserved.</p>
           </div>
         </div>
       </div>
