--- a/index.html
+++ b/index.html
@@ -71,15 +71,13 @@
                 <a href="#about" class="nav-link link-scroll">About</a>
               </li>
               <li class="nav-item">
-                <a href="#testimonials" class="nav-link link-scroll"
-                  >Testimonials</a
-                >
-              </li>
-              <li class="nav-item">
                 <a href="#references" class="nav-link link-scroll">My work</a>
               </li>
               <li class="nav-item">
                 <a href="#contact" class="nav-link link-scroll">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a href="/personal documents/resume.pdf" class="nav-link link-scroll" target="_blank">Resume</a>
               </li>
             </ul>
           </div>
@@ -105,7 +103,7 @@
               BOGDAN <span class="text-primary">MIHOCI</span>
             </h1>
             <h2 data-animate="slideInUp" class="h4 font-weight-normal mb-5">
-              Full Stack Developer
+              Junior Full Stack Developer
             </h2>
           </div>
         </div>
@@ -133,120 +131,24 @@
               solutions that add value and increase efficiency. I pride myself
               in my ability to build an end to end user-friendly, secure and
               robust web application and continuously optimise the code for
-              faster performance. My goal-oriented mindset, prompt
-              troubleshooting and problem-solving skills help me ensure the
-              timely completion of all my projects.
+              faster performance.
             </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-6">
-            <div class="skill-item">
-              <div class="progress-title">JAVA</div>
-              <div class="progress">
-                <div
-                  role="progressbar"
-                  style="width: 80%"
-                  aria-valuenow="0"
-                  aria-valuemin="60"
-                  aria-valuemax="100"
-                  class="progress-bar progress-bar-skill1"
-                ></div>
-              </div>
-            </div>
-            <div class="skill-item">
-              <div class="progress-title">Javascript</div>
-              <div class="progress">
-                <div
-                  role="progressbar"
-                  style="width: 70%"
-                  aria-valuenow="70"
-                  aria-valuemin="60"
-                  aria-valuemax="100"
-                  class="progress-bar progress-bar-skill2"
-                ></div>
-              </div>
-            </div>
-            <div class="skill-item">
-              <div class="progress-title">HTML & CSS</div>
-              <div class="progress">
-                <div
-                  role="progressbar"
-                  style="width: 60%"
-                  aria-valuenow="80"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  class="progress-bar progress-bar-skill3"
-                ></div>
-              </div>
-            </div>
-            <div class="skill-item">
-              <div class="progress-title">React</div>
-              <div class="progress">
-                <div
-                  role="progressbar"
-                  style="width: 80%"
-                  aria-valuenow="90"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  class="progress-bar progress-bar-skill4"
-                ></div>
-              </div>
-            </div>
-            <div class="skill-item">
-              <div class="progress-title">Typescript</div>
-              <div class="progress">
-                <div
-                  role="progressbar"
-                  style="width: 80%"
-                  aria-valuenow="70"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  class="progress-bar progress-bar-skill5"
-                ></div>
-              </div>
-            </div>
-          </div>
-          <!--           <div data-animate="fadeInUp" class="col-sm-6 mx-auto mt-5">
-            <img
-              src="img/about.jpg"
-              alt="This is me - IT worker"
-              class="image rounded-circle img-fluid"
-            />
-          </div> -->
-        </div>
-      </div>
-    </section>
-    <!-- Testimonials-->
-    <section id="testimonials" class="testimonials-section bg-gray">
-      <div class="container">
-        <header class="text-center mb-2">
-          <h2 data-animate="fadeInUp" class="title">
-            My customers said<br /><span>about me</span>
-          </h2>
-          <p data-animate="fadeInUp" class="lead">
-            I am always glad to hear that my customers leave satisfied. Some of
-            them shared with you their insights on our cooperation.
-          </p>
-        </header>
-        <ul
-          data-animate="fadeInUp"
-          class="owl-carousel owl-theme testimonials equalize-height"
-        >
-          <li class="item">
             <div class="testimonial full-height">
               <div class="text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco
                   laboris nisi ut aliquip ex ea commodo consequat. Duis aute
                   irure dolor in reprehenderit in voluptate velit esse cillum
                   dolore eu fugiat nulla pariatur. Excepteur sint occaecat
                   cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  mollit anim id est laborum."
                 </p>
               </div>
               <div class="bottom">
-                <div class="icon"><i class="fa fa-quote-left"></i></div>
                 <div class="name-picture">
                   <img alt="" src="img/person-1.jpg" />
                   <h5>John Doe</h5>
@@ -254,58 +156,94 @@
                 </div>
               </div>
             </div>
-          </li>
-          <li class="item">
-            <div class="testimonial full-height">
-              <div class="text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
-                </p>
-              </div>
-              <div class="bottom">
-                <div class="icon"><i class="fa fa-quote-left"></i></div>
-                <div class="name-picture">
-                  <img alt="" src="img/person-2.jpg" />
-                  <h5>John Doe</h5>
-                  <p>CEO, TransTech</p>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="testimonial full-height">
-              <div class="text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
-                </p>
-              </div>
-              <div class="bottom">
-                <div class="icon"><i class="fa fa-quote-left"></i></div>
-                <div class="name-picture">
-                  <img alt="" src="img/person-4.jpg" />
-                  <h5>John Doe</h5>
-                  <p>CEO, TransTech</p>
-                </div>
-              </div>
-            </div>
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
     </section>
+        <!--
+    *** REFERENCES IMAGE ***
+    _________________________________________________________
+    -->
+    <section id="references">
+      <div class="container">
+        <div class="col-sm-12">
+          <div class="mb-5 text-center">
+            <h2 data-animate="fadeInUp" class="title">My Skills</h2>
+          </div>
+          <div id="detail">
+            <div class="row">
+              <div class="col-lg-10 mx-auto">
+                <span class="close">×</span>
+                <div id="detail-slider" class="owl-carousel owl-theme"></div>
+                <div class="text-center">
+                  <h1 id="detail-title" class="title"></h1>
+                </div>
+                <div id="detail-content"></div>
+              </div>
+            </div>
+          </div>
+              <!-- Reference detail-->
+              <div id="references-masonry" data-animate="fadeInUp">
+                <div class="row">
+                  <div class="reference-item col-lg-3 col-md-6">
+                    <div class="reference">
+                      <div><img src="img/frontend.PNG" alt="" class="img-fluid" />
+                        <div class="overlay">
+                          <div class="inner">
+                            <p>HTML5</p>
+                            <p>CSS</p>
+                            <p>JavaScript</p>
+                            <p>ReactJS/Redux</p>
+                            <p>TypeScript</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="reference-item col-lg-3 col-md-6">
+                    <div class="reference">
+                      <div><img src="img/Server.PNG" alt="" class="img-fluid" />
+                        <div class="overlay">
+                          <div class="inner">
+                            <p>Java</p>
+                            <p>Spring Framework</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="reference-item col-lg-3 col-md-6">
+                    <div class="reference">
+                      <div><img src="img/database.PNG" alt="" class="img-fluid" />
+                        <div class="overlay">
+                          <div class="inner">
+                            <p>MySQL</p>
+                            <p>PostgreSQL</p>
+                            <p>MongoDB</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="reference-item col-lg-3 col-md-6">
+                    <div class="reference">
+                      <div><img src="img/deployment.PNG" alt="" class="img-fluid" />
+                        <div class="overlay">
+                          <div class="inner">
+                            <p>Heroku</p>
+                            <p>AWS</p>
+                            <p>Docker</p>
+                            <p>Git</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     <!--
     *** REFERENCES IMAGE ***
     _________________________________________________________
@@ -502,7 +440,7 @@
                         <h3 class="h5 reference-title">
                           Company Information Database
                         </h3>
-                        <p>Short project description goes here...</p>
+                        <p>An application that gives you the option to create your own company or join an existing one.</p>
                       </div>
                     </div></a
                   >
