Fix bug at My Skills tab

--- a/index.html
+++ b/index.html
@@ -74,10 +74,18 @@
                 <a href="#references" class="nav-link link-scroll">My work</a>
               </li>
               <li class="nav-item">
+                <a href="#skills" class="nav-link link-scroll">My skills</a>
+              </li>
+              <li class="nav-item">
                 <a href="#contact" class="nav-link link-scroll">Contact</a>
               </li>
               <li class="nav-item">
-                <a href="/personal documents/resume.pdf" class="nav-link link-scroll" target="_blank">Resume</a>
+                <a
+                  href="/personal documents/resume.pdf"
+                  class="nav-link link-scroll"
+                  target="_blank"
+                  >Resume</a
+                >
               </li>
             </ul>
           </div>
@@ -116,7 +124,7 @@
           <h2 data-animate="fadeInDown" class="title">About me</h2>
         </header>
         <div class="row">
-          <div data-animate="fadeInUp" class="col-lg-6">
+          <div data-animate="fadeInUp" class="col-lg-12">
             <p>
               I am a full stack developer looking to improve my skills in
               designing, documenting, testing and implementing new, custom
@@ -134,7 +142,7 @@
               faster performance.
             </p>
           </div>
-          <div data-animate="fadeInUp" class="col-lg-6">
+          <!--<div data-animate="fadeInUp" class="col-lg-6">
             <div class="testimonial full-height">
               <div class="text">
                 <p>
@@ -156,94 +164,11 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </section>
-        <!--
-    *** REFERENCES IMAGE ***
-    _________________________________________________________
-    -->
-    <section id="references">
-      <div class="container">
-        <div class="col-sm-12">
-          <div class="mb-5 text-center">
-            <h2 data-animate="fadeInUp" class="title">My Skills</h2>
-          </div>
-          <div id="detail">
-            <div class="row">
-              <div class="col-lg-10 mx-auto">
-                <span class="close">×</span>
-                <div id="detail-slider" class="owl-carousel owl-theme"></div>
-                <div class="text-center">
-                  <h1 id="detail-title" class="title"></h1>
-                </div>
-                <div id="detail-content"></div>
-              </div>
-            </div>
-          </div>
-              <!-- Reference detail-->
-              <div id="references-masonry" data-animate="fadeInUp">
-                <div class="row">
-                  <div class="reference-item col-lg-3 col-md-6">
-                    <div class="reference">
-                      <div><img src="img/frontend.PNG" alt="" class="img-fluid" />
-                        <div class="overlay">
-                          <div class="inner">
-                            <p>HTML5</p>
-                            <p>CSS</p>
-                            <p>JavaScript</p>
-                            <p>ReactJS/Redux</p>
-                            <p>TypeScript</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="reference-item col-lg-3 col-md-6">
-                    <div class="reference">
-                      <div><img src="img/Server.PNG" alt="" class="img-fluid" />
-                        <div class="overlay">
-                          <div class="inner">
-                            <p>Java</p>
-                            <p>Spring Framework</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="reference-item col-lg-3 col-md-6">
-                    <div class="reference">
-                      <div><img src="img/database.PNG" alt="" class="img-fluid" />
-                        <div class="overlay">
-                          <div class="inner">
-                            <p>MySQL</p>
-                            <p>PostgreSQL</p>
-                            <p>MongoDB</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="reference-item col-lg-3 col-md-6">
-                    <div class="reference">
-                      <div><img src="img/deployment.PNG" alt="" class="img-fluid" />
-                        <div class="overlay">
-                          <div class="inner">
-                            <p>Heroku</p>
-                            <p>AWS</p>
-                            <p>Docker</p>
-                            <p>Git</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
+    __
     <!--
     *** REFERENCES IMAGE ***
     _________________________________________________________
@@ -440,7 +365,10 @@
                         <h3 class="h5 reference-title">
                           Company Information Database
                         </h3>
-                        <p>An application that gives you the option to create your own company or join an existing one.</p>
+                        <p>
+                          An application that gives you the option to create
+                          your own company or join an existing one.
+                        </p>
                       </div>
                     </div></a
                   >
@@ -487,6 +415,92 @@
                         ><i class="fa fa-github"></i> Source Code</a
                       >
                     </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Skills-->
+
+    <section id="skills">
+      <div class="container">
+        <div class="col-sm-12">
+          <div class="mb-5 text-center">
+            <h2 data-animate="fadeInUp" class="title">My Skills</h2>
+          </div>
+          <div id="detail">
+            <div class="row">
+              <div class="col-lg-10 mx-auto">
+                <span class="close">×</span>
+                <div id="detail-slider" class="owl-carousel owl-theme"></div>
+                <div class="text-center">
+                  <h1 id="detail-title" class="title"></h1>
+                </div>
+                <div id="detail-content"></div>
+              </div>
+            </div>
+          </div>
+          <!-- Skills detail-->
+          <div id="skills-masonry" data-animate="fadeInUp">
+            <div class="row">
+              <div class="skill-item col-lg-3 col-md-6">
+                <div class="skill">
+                  <div>
+                    <img src="img/frontend.PNG" alt="" class="img-fluid" />
+                    <div class="overlay">
+                      <div class="inner">
+                        <p>HTML5</p>
+                        <p>CSS</p>
+                        <p>JavaScript</p>
+                        <p>ReactJS/Redux</p>
+                        <p>TypeScript</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item col-lg-3 col-md-6">
+                <div class="skill">
+                  <div>
+                    <img src="img/Server.PNG" alt="" class="img-fluid" />
+                    <div class="overlay">
+                      <div class="inner">
+                        <p>Java</p>
+                        <p>Spring Framework</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item col-lg-3 col-md-6">
+                <div class="skill">
+                  <div>
+                    <img src="img/database.PNG" alt="" class="img-fluid" />
+                    <div class="overlay">
+                      <div class="inner">
+                        <p>MySQL</p>
+                        <p>PostgreSQL</p>
+                        <p>MongoDB</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item col-lg-3 col-md-6">
+                <div class="skill">
+                  <div>
+                    <img src="img/deployment.PNG" alt="" class="img-fluid" />
+                    <div class="overlay">
+                      <div class="inner">
+                        <p>Heroku</p>
+                        <p>AWS</p>
+                        <p>Docker</p>
+                        <p>Git</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
