--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="row">
           <div data-animate="fadeInUp" class="col-lg-12">
             <p>
-              I am a full stack developer looking to improve my skills in
+              I am a junior full stack developer looking to improve my skills in
               designing, documenting, testing and implementing new, custom
               applications for commercial use. In my work, I continually aim to
               go beyond expectations, participate and contribute to various
