--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                         </ul>
                       </li>
                     </ol>
-                    <!--<h5>Being used by:</h5>
-                     Customers
+                    <h5>Being used by:</h5>
+                     <!--Customers-->
                     <section id="customers" class="customers-section sm-gray">
                       <div class="container">
                         <div class="col-lg-12">
@@ -340,7 +340,7 @@
                           </div>
                         </div>
                       </div>
-                    </section>-->
+                    </section>
                     <!-- Contact-->
                     <p class="buttons text-center">
                       <a
