--- a/index.html
+++ b/index.html
@@ -315,9 +315,9 @@
                         </ul>
                       </li>
                     </ol>
-                    <h5>Being used by:</h5>
+                    <h5>Used by:</h5>
                      <!--Customers-->
-                    <!--<section id="customers" class="customers-section sm-gray">
+                    <section id="customers" class="customers-section sm-gray">
                       <div class="container">
                         <div class="col-lg-12">
                           <div class="row align-items-center">
@@ -340,7 +340,7 @@
                           </div>
                         </div>
                       </div>
-                    </section>-->
+                    </section>
                     <!-- Contact-->
                     <p class="buttons text-center">
                       <a
