Add notification image to QMS

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                   <div
                     data-images="img/progress.png,img/cost.png,img/company-structure.png,img/products.png,img/profile.png,img/roles.png,img/non-details.png,
                     img/defect-classification.png,img/checklist.png,img/five-whys.png,img/fishbone.png,img/internal1.png,img/internal2.png,
-                    img/customer1.png,img/after-sales.png,img/culpable.png,img/logs1.png,img/task.png,img/to-do.png,img/tasks.png,img/root-cause.png"
+                    img/customer1.png,img/notifications,img/after-sales.png,img/culpable.png,img/logs1.png,img/task.png,img/to-do.png,img/tasks.png,img/root-cause.png"
                     class="sr-only reference-description"
                   >
                     <h5>Quality Management System (QMS)</h5>
