--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               BOGDAN <span class="text-primary">MIHOCI</span>
             </h1>
             <h2 data-animate="slideInUp" class="h4 font-weight-normal mb-5">
-              Junior Full Stack Developer
+              Full Stack Developer
             </h2>
           </div>
         </div>
